--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,5 +1,7 @@
 {% extends 'core/base.html' %}
 
+{% block title %}Home{% endblock %}
+
 {% block content %}
 
 <p>Esta es una presentación de la portada del proyecto</p>
