--- a/core/templates/core/portafolio.html
+++ b/core/templates/core/portafolio.html
@@ -1,5 +1,11 @@
 {% extends 'core/base.html' %}
 
+{% block title %}
+
+Portafolio
+
+{% endblock %}
+
 {% block content %}
 
 <p>Esto es el portafolio</p>
