--- a/core/templates/core/acercade.html
+++ b/core/templates/core/acercade.html
@@ -1,5 +1,11 @@
 {% extends 'core/base.html' %}
 
+{% block title %}
+
+A cerca de
+
+{% endblock %}
+
 {% block content %}
 
 <p>Esto es A cerca de....</p>
