--- a/core/templates/core/contacto.html
+++ b/core/templates/core/contacto.html
@@ -1,5 +1,11 @@
 {% extends 'core/base.html' %}
 
+{% block title %}
+
+Contacto
+
+{% endblock %}
+
 {% block content %}
 
 <p>Esta es la página de contacto</p>
