--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -48,14 +48,13 @@
     </nav>
 
     <!-- Cabecera -->
-    <header class="masthead" style="background-image: url('{% static 'core/img/home-bg.jpg' %}')">
+    <header class="masthead" style="background-image: url('{% block background %}{% endblock %}')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Iván Arenal</h1>
-              <span class="subheading">Ingeniero de Telecomunicación</span>
+              {% block headers %} {% endblock %}              
             </div>
           </div>
         </div>
@@ -65,6 +64,7 @@
     <!--Contenido-->
     {% block content %}{% endblock %}
     <!-- Pié de página -->
+    {% if request.path != "/" %} <hr> {% endif %}
     <footer>
       <div class="container">
         <div class="row">
